--- a/script.css
+++ b/script.css
@@ -28,3 +28,79 @@
     height: 100%;
     opacity: 1;
 }
+
+.frame {
+    float: left;
+    width: 100%;
+    position: relative;
+    position: relative;
+}
+
+.frame::before {
+    content: '';
+    position: absolute;
+    background-color: #d94350;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.frame:hover::before
+{
+    height: 100%;
+    opacity: 0.2;
+    transition: all 0.5s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    -moz-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+}
+
+.link
+{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    border: 1px solid #fff;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
+    opacity: 0;
+
+}
+
+.link::before
+{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 88%;
+    height: 88%;
+    border: 1px solid #fff;
+}
+
+.link:hover::before
+{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 88%;
+    height: 88%;
+    border: 1px solid #fff;
+    opacity: 0.2;
+}
