--- a/script.css
+++ b/script.css
@@ -111,7 +111,8 @@
 
 
 
-
+.collapse{display:none;}
+.collapse.in{display:block;}
 .acor-container {
     margin: 20px 0;
 }
@@ -170,4 +171,35 @@
     margin-top: -5px;
     color: #000;
     padding: 20px 30px 10px;
+}
+.burger form {
+    float: left;
+    width: 100%;
+    position: relative;
+    margin: 45px 0 30px 0;
+}
+.burger form input[type="text"] {
+    float: left;
+    width: 100%;
+    height: 41px;
+    border: 0;
+    padding: 0 58px 0 20px;
+    margin: 0;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    background-color: #2b2b2b;
+    font: italic 400 12px/12px 'Futuris', arial sans-serif;
+    color: #666;
+}
+.burger form button {
+    position: absolute;
+    right: 8px;
+    top: 13px;
+    border: 0;
+    background: none;
+    padding: 0 0 0 12px;
+    margin: 0;
+    font-size: 14px;
+    border-left: 1px solid #444;
 }
