--- a/swiper/custom.css
+++ b/swiper/custom.css
@@ -5378,3 +5378,13 @@ input,button,textarea{outline:none;}
 	margin-bottom:30px;
 }
 
+@media (min-width:769px){
+	.footer-bg {
+        background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 80%, #ab2b3a 80%, #ab2b3a 100%)
+    }
+}
+
+.footer-bg {
+    
+}
+
