Исправил главную страницу. TODO: заменить bootstrap на tailwind

--- a/swiper/custom.css
+++ b/swiper/custom.css
@@ -5389,3 +5389,7 @@ input,button,textarea{outline:none;}
 	rgba(255, 255, 255, 0.92) 90%,
 	rgba(255, 255, 255, 0.9) 100%);
 }
+
+.text-right {
+    text-align: right;
+}
